<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="Chinese">简体中文</string>
    <string name="English">English</string>
    <string name="QQweiboo">QQ Micro-Blog</string>
    <string name="UMAppUpdate">应用更新</string>
    <string name="UMBreak_Network">未联网</string>
    <string name="UMDialog_InstallAPK">最新版本已下载，是否安装？</string>
    <string name="UMGprsCondition">（提示：非WIFI环境）</string>
    <string name="UMIgnore">忽略该版</string>
    <string name="UMNewVersion">最新版本:</string>
    <string name="UMNotNow">以后再说</string>
    <string name="UMTargetSize">新版本大小:</string>
    <string name="UMToast_IsUpdating">正在更新中....</string>
    <string name="UMUpdateContent">更新内容</string>
    <string name="UMUpdateNow">立即更新</string>
    <string name="UMUpdateSize">仅需要下载:</string>
    <string name="UMUpdateTitle">发现新版本</string>
    <string name="accoubt_record">Records</string>
    <string name="accoubt_record_detail">Detail</string>
    <string name="accoubt_record_title">Trade Records</string>
    <string name="account_rechange">Deposit</string>
    <string name="account_user">Account Balance</string>
    <string name="add_address">Please Enter Address</string>
    <string name="add_again_text">Confirm</string>
    <string name="add_correct_email">Please Enter Correct Email Address</string>
    <string name="add_email">Please Enter Email Address</string>
    <string name="add_name">Please Enter Your Name</string>
    <string name="add_paper_hint">please input NO.</string>
    <string name="add_succeed1_text">Congratulations！</string>
    <string name="add_succeed2_text">Red envelope add success！</string>
    <string name="add_tel">Please Enter Phone Number</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="add_to_cart_success">Added to Cart</string>
    <string name="address">Address</string>
    <string name="address2_choosed_area">Area Selected</string>
    <string name="address2_no_choosed"></string>
    <string name="address_add">Add Address</string>
    <string name="address_add_first">You do not have the goods address, add immediately?</string>
    <string name="address_add_succeed">Add Address Succeed!</string>
    <string name="address_address">Address</string>
    <string name="address_area">Country</string>
    <string name="address_back">Back</string>
    <string name="address_consignee">Consignee</string>
    <string name="address_consigneeinfo">Consignee</string>
    <string name="address_defalt">The Default Address</string>
    <string name="address_delete_attention">Sure to delete？</string>
    <string name="address_email">Email(Optional)</string>
    <string name="address_email_false">Address_email_false</string>
    <string name="address_mobile_false">Please input the correct phone number</string>
    <string name="address_name_toolong">The consignee name is too long</string>
    <string name="address_phone">Mobile</string>
    <string name="address_save">Save</string>
    <string name="address_selected">Address Selected</string>
    <string name="address_tel">Phone</string>
    <string name="address_updated">Address Updated</string>
    <string name="address_zip">Postal / ZIP code(Optional)</string>
    <string name="address_zipcode_false">Please input the correct postal code</string>
    <string name="address_zipcode_notnull">Postal code can not be empty</string>
    <string name="addressb_country">Select Country</string>
    <string name="advance_search">Advance_Search</string>
    <string name="again_exit">Press again to exit the APP</string>
    <string name="all">All</string>
    <string name="amount">Amount</string>
    <string name="app_name">米时</string>
    <string name="apply">Applying</string>
    <string name="area">District</string>
    <string name="at_all"></string>
    <string name="avail_exp">Available Points</string>
    <string name="balance_address">Consignee Address</string>
    <string name="balance_bill">Invoice</string>
    <string name="balance_buy_success">Buy Success！</string>
    <string name="balance_cancel">Cancel</string>
    <string name="balance_choose_payment">Please choose the payment first!</string>
    <string name="balance_choose_payment_first">Please choose the payment</string>
    <string name="balance_choose_shipping">Please select the distribution!</string>
    <string name="balance_deng">] etc.</string>
    <string name="balance_detail">Order Details</string>
    <string name="balance_exp">Integral</string>
    <string name="balance_forall">Total Fee</string>
    <string name="balance_formateddiscount">Discount</string>
    <string name="balance_freigh">Freight</string>
    <string name="balance_gobalancelist">The order has been generated, please order the list view</string>
    <string name="balance_goods_num">#replace# goods</string>
    <string name="balance_integral_use">Be available</string>
    <string name="balance_invoice_close">Reactive power has close invoice!</string>
    <string name="balance_invoicefee">Invoice Fee:</string>
    <string name="balance_list">Product List</string>
    <string name="balance_nopayment">No Payment Support</string>
    <string name="balance_notsupport_COD">Cash on delivery not support</string>
    <string name="balance_notsupport_integral">Not support integration!</string>
    <string name="balance_notsupport_redpaper">Not support bonus!</string>
    <string name="balance_null_use">Not available</string>
    <string name="balance_order_incloud">The order includes [</string>
    <string name="balance_pay">Payment</string>
    <string name="balance_pay2">Orders have been successfully generated, free goods without paying</string>
    <string name="balance_realpay">Subtotal:</string>
    <string name="balance_receiver">Consignee</string>
    <string name="balance_redpager_use">Be available</string>
    <string name="balance_redpocket">Bonus</string>
    <string name="balance_rental">Subtotal:</string>
    <string name="balance_return">Discount</string>
    <string name="balance_shipping">Shipping</string>
    <string name="balance_submit">Place Order</string>
    <string name="balance_transportation">Transportation</string>
    <string name="balance_zhong_goods">Commodities.</string>
    <string name="bank_card">Bank Card</string>
    <string name="bank_card_is_empty">please enter your right bank card</string>
    <string name="bank_name">Bank Name</string>
    <string name="bank_name_is_empty">please enter your bank name</string>
    <string name="bank_name_tips">Your Bank of deposit</string>
    <string name="been_used">Username or Email has been used</string>
    <string name="bill_commodity">Supplies</string>
    <string name="bill_food">Food</string>
    <string name="bill_office">Stationery</string>
    <string name="bill_save">Save</string>
    <string name="bill_title">Invoice Title</string>
    <string name="brand">Brand</string>
    <string name="broadcast_success">Broadcast Success</string>
    <string name="browser">Internet Explorer</string>
    <string name="brstock">Inventory:</string>
    <string name="btn_logon">Fast Login</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_forward">Go</string>
    <string name="button_ignore">Ignore</string>
    <string name="button_no">No</string>
    <string name="button_ok">OK</string>
    <string name="button_yes">Yes</string>
    <string name="calander_click_close">Fold</string>
    <string name="calander_click_look">Detail</string>
    <string name="calander_click_open">Check\nIn</string>
    <string name="can_not_delete">Can not delete the default address</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_call">Cannot call number</string>
    <string name="cannot_open">Cannot open page</string>
    <string name="cart">Cart</string>
    <string name="cart_check_total">Final</string>
    <string name="cart_reduce">Reduce</string>
    <string name="category">Search</string>
    <string name="category_for_chioce">Categories for you choose</string>
    <string name="certinfo">Certificates</string>
    <string name="change_password_succeed">Change succeeded！</string>
    <string name="change_send">Send Code</string>
    <string name="cheapest">Cheapest</string>
    <string name="check_in">Check In</string>
    <string name="check_in_checked">You had Checked in！</string>
    <string name="check_in_close">Close Check In Notification</string>
    <string name="check_in_close_notify">Click to unnotity</string>
    <string name="check_in_consecutive">Consecutive</string>
    <string name="check_in_day_1">1 Day</string>
    <string name="check_in_day_2">2 Day</string>
    <string name="check_in_day_3">3 Day</string>
    <string name="check_in_day_4">4 Day</string>
    <string name="check_in_day_5">5 Day</string>
    <string name="check_in_day_fri">Fri</string>
    <string name="check_in_day_mon">Mon</string>
    <string name="check_in_day_sat">Sat</string>
    <string name="check_in_day_sun">Sun</string>
    <string name="check_in_day_thur">Thur</string>
    <string name="check_in_day_tue">Tue</string>
    <string name="check_in_day_wed">Wed</string>
    <string name="check_in_days">Days</string>
    <string name="check_in_myintegral">My Integreal:</string>
    <string name="check_in_open">Open Check In Notification</string>
    <string name="check_in_records">Check In Records</string>
    <string name="dear_third_login_user">Dear #replace# user:</string>
    <string name="dialog_ensure">Confirm</string>
    <string name="enable_condition">condition:</string>
    <string name="enable_time">duration of use:</string>
    <string name="goods_earth_min">(The lowest global challenge)</string>
    <string name="goods_sale">Promotion</string>
    <string name="has_orign_account">has account？</string>
    <string name="hotselling_recommend">Special Offer</string>
    <string name="no_orign_account">no account？</string>
    <string name="num_error1">number incorrect，</string>
    <string name="num_error2">Please input again!</string>
    <string name="quick_bind">Quick Bind</string>
    <string name="quick_register">Quick Register</string>
    <string name="redpaper_amount">amount:</string>
    <string name="redpaper_detail">Red Details</string>
    <string name="redpaper_name">name:</string>
    <string name="remark_content">The Remarks</string>
    <string name="remark_input">Fill in the notes (not more than 100 words)</string>
    <string name="remark_remark">Remarks</string>
    <string name="repeat_input">Re input</string>
    <string name="third_login_bonus">bind an account for more bonus</string>
</resources>