<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@drawable/shape_redpaper_detail_bg" android:layout_width="match_parent" android:layout_height="wrap_content"
    <LinearLayout android:orientation="vertical" android:id="@+id/redpaper_item" android:layout_width="match_parent" android:layout_height="match_parent"
        <LinearLayout android:orientation="vertical" android:id="@+id/detail_item" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="20dp">
            <TextView android:textSize="@dimen/twenty_two_dp" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_marginBottom="15dp" android:text="@string/redpaper_detail" />
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="10dp">
                <TextView android:textSize="@dimen/sixteen_dp" android:layout_width="UNKNOWN_DATA_0x5001" android:layout_height="wrap_content" android:text="@string/redpaper_name" />
                <TextView android:textSize="@dimen/sixteen_dp" android:id="@+id/redpaper_name" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="wrap_content" android:layout_weight="1.0" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="10dp">
                <TextView android:textSize="@dimen/sixteen_dp" android:layout_width="UNKNOWN_DATA_0x5001" android:layout_height="wrap_content" android:text="@string/redpaper_amount" />
                <TextView android:textSize="@dimen/sixteen_dp" android:textColor="@color/my_red" android:id="@+id/redpaper_amount" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="wrap_content" android:layout_weight="1.0" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="10dp">
                <TextView android:textSize="@dimen/sixteen_dp" android:layout_width="UNKNOWN_DATA_0x5001" android:layout_height="wrap_content" android:text="@string/enable_time" />
                <TextView android:textSize="@dimen/sixteen_dp" android:textColor="@color/my_red" android:id="@+id/redpaper_time" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="wrap_content" android:layout_weight="1.0" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/sixteen_dp" android:layout_width="UNKNOWN_DATA_0x5001" android:layout_height="wrap_content" android:text="@string/enable_condition" />
                <TextView android:textSize="@dimen/sixteen_dp" android:id="@+id/redpaper_condition" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="wrap_content" android:layout_weight="1.0" />
            </LinearLayout>
            <Button android:textSize="@dimen/title_textsize" android:textColor="#ffffff" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/add_ok" android:background="@drawable/selector_login_button" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x2d01" android:layout_marginTop="20dp" android:layout_marginBottom="20dp" android:minWidth="100dp" android:text="@string/add_again_text" />
            <Button android:textSize="@dimen/title_textsize" android:textColor="#ffffff" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/add_cancel" android:background="@drawable/selector_cancle" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x2d01" android:minWidth="100dp" android:text="@string/cancel" />
        </LinearLayout>
        <LinearLayout android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="vertical" android:id="@+id/repeat_item" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="30dp">
            <TextView android:textSize="@dimen/twenty_two_dp" android:textColor="@color/public_theme_color_press" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/repeat_text1" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/num_error1" />
            <TextView android:textSize="@dimen/twenty_two_dp" android:textColor="@color/public_theme_color_press" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/repeat_text2" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/num_error2" />
            <ImageView android:id="@+id/repeat_bg" android:background="@drawable/redpaper_repeat_input" android:layout_width="UNKNOWN_DATA_0x9601" android:layout_height="UNKNOWN_DATA_0x9601" />
            <Button android:textSize="@dimen/title_textsize" android:textColor="#ffffff" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/add_repeat_input" android:background="@drawable/selector_login_button" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x2d01" android:layout_margin="30dp" android:minWidth="100dp" android:text="@string/repeat_input" />
        </LinearLayout>
        <LinearLayout android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="vertical" android:id="@+id/add_succeed_item" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="30dp">
            <TextView android:textSize="@dimen/twenty_five_dp" android:textColor="@color/public_theme_color_press" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/add_succeed1_text" />
            <TextView android:textSize="@dimen/twenty_two_dp" android:textColor="@color/public_theme_color_press" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/add_succeed2_text" />
            <ImageView android:background="@drawable/redpaper_add_success" android:layout_width="UNKNOWN_DATA_0x9601" android:layout_height="UNKNOWN_DATA_0x9601" />
            <Button android:textSize="@dimen/title_textsize" android:textColor="#ffffff" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/btn_add_succeed" android:background="@drawable/selector_login_button" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x2d01" android:layout_margin="30dp" android:minWidth="100dp" android:text="@string/dialog_ensure" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
