<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res-auto" app:orientation="vertical" app:background="#f3f3f1" app:layout_width="match_parent" app:layout_height="match_parent"
    <LinearLayout app:orientation="vertical" app:background="@drawable/image_signin_header" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0xa801"
        <LinearLayout app:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" app:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" app:orientation="horizontal" app:background="@drawable/image_signin_score" app:layout_width="UNKNOWN_DATA_0xc801" app:layout_height="UNKNOWN_DATA_0x2801" app:layout_marginTop="10dp">
            <TextView app:textSize="14dp" app:textColor="#ffffff" app:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:layout_width="wrap_content" app:layout_height="match_parent" app:text="@string/check_in_myintegral" />
            <TextView app:textSize="14dp" app:textColor="#ffffff" app:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/signin_record_myscore" app:layout_width="wrap_content" app:layout_height="match_parent" app:text="0" />
        </LinearLayout>
        <LinearLayout app:orientation="horizontal" app:padding="15dp" app:layout_width="match_parent" app:layout_height="wrap_content">
            <com.ecjia.component.view.ECJiaSignView app:id="@+id/signrecord_days_one" app:layout_width="UNKNOWN_DATA_0x1" app:layout_height="UNKNOWN_DATA_0x3701" app:layout_weight="1.0" app:signcontent="@string/check_in_day_1" app:signType="false" />
            <com.ecjia.component.view.ECJiaSignView app:id="@+id/signrecord_days_two" app:layout_width="UNKNOWN_DATA_0x1" app:layout_height="UNKNOWN_DATA_0x3701" app:layout_weight="1.0" app:signcontent="@string/check_in_day_2" app:signType="false" />
            <com.ecjia.component.view.ECJiaSignView app:id="@+id/signrecord_days_three" app:layout_width="UNKNOWN_DATA_0x1" app:layout_height="UNKNOWN_DATA_0x3701" app:layout_weight="1.0" app:signcontent="@string/check_in_day_3" app:signType="false" />
            <com.ecjia.component.view.ECJiaSignView app:id="@+id/signrecord_days_four" app:layout_width="UNKNOWN_DATA_0x1" app:layout_height="UNKNOWN_DATA_0x3701" app:layout_weight="1.0" app:signcontent="@string/check_in_day_4" app:signType="false" />
            <com.ecjia.component.view.ECJiaSignView app:id="@+id/signrecord_days_five" app:layout_width="UNKNOWN_DATA_0x1" app:layout_height="UNKNOWN_DATA_0x3701" app:layout_weight="1.0" app:signcontent="@string/check_in_day_5" app:signType="false" />
        </LinearLayout>
        <TextView app:textSize="12dp" app:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/signin_lable" app:background="#00000000" app:layout_width="wrap_content" app:layout_height="wrap_content" app:scaleType="centerInside" app:text="" />
    </LinearLayout>
    <LinearLayout app:orientation="horizontal" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x3201">
        <View app:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" app:background="@color/my_red" app:layout_width="UNKNOWN_DATA_0x601" app:layout_height="UNKNOWN_DATA_0x1401" app:layout_marginLeft="15dp" />
        <TextView app:textSize="15dp" app:textColor="#000000" app:gravity="top|bottom|center_vertical|fill_vertical|center|fill" app:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x2801" app:layout_marginLeft="10dp" app:text="@string/check_in_records" />
    </LinearLayout>
    <FrameLayout app:layout_width="match_parent" app:layout_height="match_parent">
        <com.ecjia.component.view.ECJiaErrorView app:visibility="gone" app:layout_width="match_parent" app:layout_height="match_parent" app:errorImage="@drawable/null_normal" />
        <ListView app:id="@+id/lottery_listview" app:background="#ffffff" app:scrollbars="UNKNOWN_DATA_0x0" app:layout_width="match_parent" app:layout_height="match_parent" app:listSelector="0x106000d" app:divider="0x0" />
    </FrameLayout>
</LinearLayout>
