<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:id="@+id/new_goodtitle" android:background="#ffffff" android:layout_width="match_parent" android:layout_height="wrap_content"
    <LinearLayout android:orientation="horizontal" android:id="@+id/new_have_goods" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x2d01"
        <LinearLayout android:orientation="horizontal" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="match_parent" android:layout_weight="1.0">
            <TextView android:textSize="13dp" android:textColor="#ffffff" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:background="@drawable/index_hot_icon" android:visibility="gone" android:layout_width="UNKNOWN_DATA_0x2601" android:layout_height="UNKNOWN_DATA_0x2601" android:text="@string/hotselling_recommend" />
            <ImageView android:padding="5dp" android:layout_width="UNKNOWN_DATA_0x2d01" android:layout_height="UNKNOWN_DATA_0x2d01" android:layout_marginLeft="5dp" android:src="@drawable/banner_icon" />
            <TextView android:textSize="@dimen/list_item_title" android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="5dp" android:text="@string/goods_sale" />
            <TextView android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="5dp" android:text="@string/goods_earth_min" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
