<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@drawable/new_good_distance" android:layout_width="match_parent" android:layout_height="match_parent">
    <FrameLayout android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x3001">
        <View android:background="#000000" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x1401" />
        <ImageView android:background="@drawable/searcher_new_header_bg" android:layout_width="match_parent" android:layout_height="match_parent" />
        <ImageView android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@+id/remark_back" android:padding="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/header_back_arrow" />
        <TextView android:textSize="@dimen/title_textsize" android:textColor="#ffffff" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/remark_remark" />
        <Button android:textSize="@dimen/title_right_textsize" android:textColor="#ffffff" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/remark_save" android:background="#00000000" android:layout_width="UNKNOWN_DATA_0x3201" android:layout_height="UNKNOWN_DATA_0x2301" android:layout_marginRight="10dp" android:text="@string/bill_save" />
    </FrameLayout>
    <LinearLayout android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:orientation="vertical" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/list_item_title" android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:paddingTop="10dp" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x2801" android:layout_marginLeft="15dp" android:text="@string/remark_content" />
        <EditText android:textSize="@dimen/list_item_title" android:textColorHint="#66999999" android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@+id/remark_content" android:background="@drawable/shap_remark_edit" android:paddingLeft="7dp" android:paddingTop="7dp" android:paddingRight="7dp" android:paddingBottom="7dp" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0xc801" android:layout_marginLeft="15dp" android:layout_marginRight="15dp" android:hint="@string/remark_input" android:maxLength="255" />
    </LinearLayout>
</LinearLayout>
